--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@effect/platform-bun": "^0.79.0",
+    "@types/bun": "^1.2.20",
     "effect": "^3.17.7"
   },
   "devDependencies": {
