--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "check": "biome check"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.0.6",
