--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TanStack App",
-  "name": "Create TanStack App Sample",
+  "short_name": "Birdbrain",
+  "name": "Birdbrain -- little twitter brain",
   "icons": [
     {
       "src": "favicon.ico",
